<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
 
<ImageView
  android:layout_width="fill_parent"
  android:layout_height="@dimen/colorstrip_height"
  android:background="@drawable/colorstrip"/>
<LinearLayout style="@style/TitleBar">
 <Button android:id="@+id/button11"
android:onClick="Menu11_Method"
android:padding="0sp"
android:textColor="@drawable/button_text_color"
android:textSize="14dip"
android:text="@string/menu_11"
android:layout_weight="1"
android:layout_gravity="center_vertical"
android:contentDescription="Bus Map"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/button12"
android:onClick="Menu12_Method"  
android:padding="0sp"
android:textColor="@drawable/button_text_color"
android:textSize="14dip"
android:text="@string/menu_12"
android:layout_weight="1"
android:contentDescription="Map2"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/button13"
android:onClick="Menu13_Method"
android:padding="0sp"
android:textColor="@drawable/button_text_color"
android:textSize="14dip"
android:text="@string/menu_13"
android:layout_weight="1"
android:contentDescription="Locations"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/button14"
android:onClick="Menu14_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_14"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button15"
android:onClick="Menu15_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_15"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button16"
android:onClick="Menu16_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_16"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button17"
android:onClick="Menu17_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_17"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button18"
android:onClick="Menu18_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_18"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button19"
android:onClick="Menu19_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_19"
android:layout_weight="1"
android:layout_gravity="center_vertical"
android:contentDescription="WebCamShow3"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/button20"
android:onClick="Menu20_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_20"
android:layout_weight="1"
android:layout_gravity="center_vertical"
android:contentDescription="WebCamShow"
android:layout_marginLeft="1sp"
android:layout_marginRight="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
</LinearLayout>
</LinearLayout>
