<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="fill_parent">
 
<ImageView
  android:layout_width="fill_parent"
  android:layout_height="@dimen/colorstrip_height"
  android:background="@drawable/colorstrip"/>
<LinearLayout style="@style/TitleBar">
 <Button android:id="@+id/button4"
android:onClick="Menu1_Method"
android:padding="0sp"
android:textColor="@drawable/button_text_color"
android:textSize="14dip"
android:text="@string/menu_map"
android:layout_weight="1"
android:layout_gravity="center_vertical"
android:contentDescription="Bus Map"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/button3"
android:onClick="Menu2_Method"  
android:padding="0sp"
android:textColor="@drawable/button_text_color"
android:textSize="14dip"
android:text="@string/menu_metro"
android:layout_weight="1"
android:contentDescription="Map2"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/Menu3_Method"
android:onClick="Menu3_Method"
android:padding="0sp"
android:textColor="@drawable/button_text_color"
android:textSize="14dip"
android:text="@string/menu_places"
android:layout_weight="1"
android:contentDescription="Locations"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/button2"
android:onClick="Menu4_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/web_cam"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button2_2"
android:onClick="Menu5_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/web_cam2"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button2_2"
android:onClick="Menu6_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/web_cam3"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/buttona"
android:onClick="Menu7_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_game"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/buttonb"
android:onClick="Menu8_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_3"
android:layout_weight="1"
android:contentDescription="web cam"
android:layout_gravity="center_vertical"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp" />
<Button android:id="@+id/button1"
android:onClick="Menu9_Method"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_twitter"
android:layout_weight="1"
android:layout_gravity="center_vertical"
android:contentDescription="WebCamShow3"
android:layout_marginLeft="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
<Button android:id="@+id/button10"
android:onClick="Menu10_Method"
android:visibility="visible"
android:padding="0sp"
android:textSize="14dip"
android:textColor="@drawable/button_text_color"
android:text="@string/menu_10"
android:layout_weight="1"
android:layout_gravity="center_vertical"
android:contentDescription="WebCamShow"
android:layout_marginLeft="1sp"
android:layout_marginRight="1sp"
android:layout_marginBottom="5sp"
android:layout_marginTop="5sp"
android:background="@drawable/abc2"
android:layout_width="wrap_content"
android:layout_height="40dp">
</Button>
</LinearLayout>
</LinearLayout>
